form validation done

--- a/app/cookie-policy.html
+++ b/app/cookie-policy.html
@@ -4,7 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>ARS Data</title>
+
+  <meta name="keywords" content="ARS Data, Data sience, Big data, Embedded, HVAC, Maintenance">
+  <meta name="author" content="EarlyBird">
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="ARS Data website">
+  <meta name="twitter:description" content="ARS Data website">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="ARS Data">
+  <meta property="og:url" content="">
+  <meta property="og:site_name" content="ARS Data">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="ARS Data">
+  <meta property="og:description" content="ARS Data website">
+
+  <base href="/">
+  <link rel="manifest" href="manifest.json">
+
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
@@ -28,10 +47,10 @@
 
         <div class="navigation-desktop">
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
-          <a class="navigation-desktop__item" href="#about">About us</a>
-          <a class="navigation-desktop__item" href="/services.html">Solutions</a>
-          <a class="navigation-desktop__item" href="#technology">Technology</a>
-          <a class="navigation-desktop__item" href="#contact">Contact</a>
+          <a class="navigation-desktop__item" href="./about-us.html">About us</a>
+          <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
+          <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
     </div>
