--- a/app/privacy-policy.html
+++ b/app/privacy-policy.html
@@ -4,7 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>ARS Data</title>
+
+  <meta name="keywords" content="ARS Data, Data sience, Big data, Embedded, HVAC, Maintenance">
+  <meta name="author" content="EarlyBird">
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="ARS Data website">
+  <meta name="twitter:description" content="ARS Data website">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="ARS Data">
+  <meta property="og:url" content="">
+  <meta property="og:site_name" content="ARS Data">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="ARS Data">
+  <meta property="og:description" content="ARS Data website">
+
+  <base href="/">
+  <link rel="manifest" href="manifest.json">
+
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
@@ -12,6 +31,9 @@
 </head>
 
 <body>
+  <noscript>
+    Website doesn't work when JavaScript disabled. Please enable JavaScript
+  </noscript>
 
   <header class="header">
     <div class="container flex-between">
@@ -28,10 +50,10 @@
 
         <div class="navigation-desktop">
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
-          <a class="navigation-desktop__item" href="#about">About us</a>
-          <a class="navigation-desktop__item" href="/services.html">Solutions</a>
-          <a class="navigation-desktop__item" href="#technology">Technology</a>
-          <a class="navigation-desktop__item" href="#contact">Contact</a>
+          <a class="navigation-desktop__item" href="./about-us.html">About us</a>
+          <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
+          <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
     </div>
@@ -129,34 +151,42 @@
             <div class="policy-content-paragraph">
               <h3 class="policy-content-paragraph__title">What are your data protection rights?</h3>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                Our Company would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to
+                Our Company would like to make sure you are fully aware of all of your data protection rights. Every
+                user is entitled to
                 the following:
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to access – You have the right to request us for copies of your personal data. We may charge you a small fee
+                The right to access – You have the right to request us for copies of your personal data. We may charge
+                you a small fee
                 for this service.
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to rectification – You have the right to request that we correct any information you believe is inaccurate.
+                The right to rectification – You have the right to request that we correct any information you believe
+                is inaccurate.
                 You also have the right to request us to complete the information you believe is incomplete.
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to erasure – You have the right to request that we erase your personal data, under certain conditions.
-              </p>
-              <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to restrict processing – You have the right to request us to restrict the processing of your personal data,
-                under certain conditions.
-              </p>
-              <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to object to processing – You have the right to object to us processing of your personal data, under certain
+                The right to erasure – You have the right to request that we erase your personal data, under certain
                 conditions.
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                The right to data portability – You have the right to request that we transfer the data that we have collected to
+                The right to restrict processing – You have the right to request us to restrict the processing of your
+                personal data,
+                under certain conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to object to processing – You have the right to object to us processing of your personal data,
+                under certain
+                conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to data portability – You have the right to request that we transfer the data that we have
+                collected to
                 another organization, or directly to you, under certain conditions.
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
+                If you make a request, we have one month to respond to you. If you would like to exercise any of these
+                rights, please
                 contact us at our email:
                 <a href="mailto:hello@arsdata.io" class="policy-content-email__mail">hello@arsdata.io</a>
               </p>
@@ -164,14 +194,16 @@
             <div class="policy-content-paragraph">
               <h3 class="policy-content-paragraph__title">Changes to our privacy policy</h3>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                We keep our privacy policy under regular review and places any updates on this web page. This privacy policy was last
+                We keep our privacy policy under regular review and places any updates on this web page. This privacy
+                policy was last
                 updated on 20 April 2019.
               </p>
             </div>
             <div class="policy-content-paragraph policy-content-paragraph_small">
               <h3 class="policy-content-paragraph__title">How to contact us</h3>
               <p class="policy-content-paragraph__text policy-content__text_small">
-                If you have any questions about our privacy policy, the data we hold on you, or you would like to exercise one of your
+                If you have any questions about our privacy policy, the data we hold on you, or you would like to
+                exercise one of your
                 data protection rights, please do not hesitate to contact us.
               </p>
               <p class="policy-content-paragraph__text policy-content__text_small">
