--- a/app/contacts.html
+++ b/app/contacts.html
@@ -4,7 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>ARS Data</title>
+
+  <meta name="keywords" content="ARS Data, Data sience, Big data, Embedded, HVAC, Maintenance">
+  <meta name="author" content="EarlyBird">
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="ARS Data website">
+  <meta name="twitter:description" content="ARS Data website">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="ARS Data">
+  <meta property="og:url" content="">
+  <meta property="og:site_name" content="ARS Data">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="ARS Data">
+  <meta property="og:description" content="ARS Data website">
+
+  <base href="/">
+  <link rel="manifest" href="manifest.json">
+
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
@@ -12,6 +31,10 @@
 </head>
 
 <body>
+  <noscript>
+    Website doesn't work when JavaScript disabled. Please enable JavaScript
+  </noscript>
+
   <img class="contact-page-bg" src="./images/illustrations/contact-page-bg-img.svg" alt="">
 
   <header class="header">
@@ -19,20 +42,20 @@
       <a href="index.html" class="header__logo">
         <img src="images/logos/logo-white.svg" alt="ARS Data logo">
       </a>
-  
+
       <nav class="navigation" id="navigation">
         <a aria-label="mobile menu" class="navigation-mobile">
           <span></span>
           <span></span>
           <span></span>
         </a>
-  
+
         <div class="navigation-desktop">
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
-          <a class="navigation-desktop__item" href="#about">About us</a>
-          <a class="navigation-desktop__item" href="/services.html">Solutions</a>
-          <a class="navigation-desktop__item" href="#technology">Technology</a>
-          <a class="navigation-desktop__item" href="#contact">Contact</a>
+          <a class="navigation-desktop__item" href="./about-us.html">About us</a>
+          <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
+          <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
     </div>
@@ -53,28 +76,45 @@
           </p>
         </div>
         <div class="contact-page-content contact-page-content_2">
-          <!-- <p class="contact-content-form__text text"></p> -->
           <form class="form" id="contact-form">
-            <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
-            <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
+
+            <div class="form-input-box">
+              <input id="formname" name="name" type="text" class="form-input-box__input" type="text" placeholder="Name"
+                required>
+              <label for="name" id="formNameLable" class="form-input-box__lable"></label>
+            </div>
+
+            <div class="form-input-box">
+              <input id="formemail" name="email" type="email" class="form-input-box__input" placeholder="Email"
+                required>
+              <label for="email" id="formEmailLable" class="form-input-box__lable"></label>
+            </div>
+
+
             <div class="form-textarea-box">
-              <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3" placeholder="Message"
-                required></textarea>
+              <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3"
+                placeholder="Message"></textarea>
               <!-- <button class="form-textarea-box__btn" id="submit-button">Send</button> -->
-              <button class="home__startbtn blue-link" id="submit-button">Send</button>
+              <div class="flex-between">
+                <button type="submit" class="home__startbtn blue-link" id="submit-button" soul="contacts-form">Send
+                  message</button>
+                <span class="home__startbtn blue-link form-success-text">Send message</span>
+                <span class="home__startbtn blue-link form-error-text">Your message wasn’t sent</span>
+              </div>
             </div>
             <div class="form-radio-box">
               <p>
                 <input class="form-radio-box__radio" type="checkbox" name="termsAndConditions" id="termsAndConditions">
                 <label class="form-radio-box-lable" for="termsAndConditions">By clicking the button above, I agree
                   with
-                  <a href="" target="_blanc" class="form-radio-box-lable__link">Terms of Service</a> and
-                  <a href="" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
+                  <a href="./terms-and-conditions.html" target="_blanc" class="form-radio-box-lable__link">Terms of
+                    Service</a> and
+                  <a href="./privacy-policy.html" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
               </p>
               </label>
             </div>
           </form>
-          <div id="formsubmit"></div>
+
         </div>
       </div>
     </section>
