--- a/app/about-us.html
+++ b/app/about-us.html
@@ -104,31 +104,45 @@
           </div>
 
           <div class="contact-content-form">
-            <h2 class="contact-content-form__caption contact-content-form__caption_desktop caption">Got questions? — get
+            <h2 class="contact-content-form__caption caption">Got questions? — get
               in touch</h2>
-            <h2 class="contact-content-form__caption contact-content-form__caption_mobile caption">Got questions?</h2>
-            <p class="contact-content-form__text text">Send us your questions and we will get back to you as soon as
-              possible</p>
+            <!-- <h2 class="contact-content-form__caption contact-content-form__caption_mobile caption">Got questions?</h2> -->
+            <p class="contact-content-form__text">Send us your questions and we will get back to you as soon as possible
+            </p>
 
             <form class="form" id="contact-form">
-              <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
-              <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
-              <div class="form-textarea-box">
-                <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3" placeholder="Message"
-                  required></textarea>
-                <button class="form-textarea-box__btn" id="submit-button">Send</button>
+              <div class="form-input-box">
+                <input id="formname" name="name" type="text" class="form-input-box__input" type="text"
+                  placeholder="Name" required>
+                <label for="name" id="formNameLable" class="form-input-box__lable"></label>
               </div>
+
+              <div class="form-input-box">
+                <input id="formemail" name="email" type="email" class="form-input-box__input" placeholder="Email"
+                  required>
+                <label for="email" id="formEmailLable" class="form-input-box__lable"></label>
+              </div>
+
+              <div class="form-textarea-box">
+                <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3"
+                  placeholder="Message"></textarea>
+                <button type="submit" class="form-textarea-box__btn" id="submit-button" soul="index-form">Send</button>
+              </div>
+
               <div class="form-radio-box">
                 <p>
                   <input class="form-radio-box__radio" type="checkbox" name="termsAndConditions"
                     id="termsAndConditions">
                   <label class="form-radio-box-lable" for="termsAndConditions">By clicking the button above, I agree
                     with
-                    <a href="" target="_blanc" class="form-radio-box-lable__link">Terms of Service</a> and
-                    <a href="" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
+                    <a href="./terms-and-conditions.html" target="_blanc" class="form-radio-box-lable__link">Terms of
+                      Service</a> and
+                    <a href="./privacy-policy.html" target="_blanc" class="form-radio-box-lable__link">Privacy
+                      Policy</a>
                 </p>
                 </label>
               </div>
+
             </form>
 
 
