content and font fixes + 1440 container width fixes

--- a/app/index.html
+++ b/app/index.html
@@ -132,44 +132,78 @@
         <div class="solutions-grid">
           <a href="./solutions.html#0" class="solutions-grid-item" (click)="goToSolution(0)">
             <p class="solutions-grid-item__caption">Predictive Maintenance</p>
-            <p class="solutions-grid-item__text">Predict the future health of equipment or an asset</p>
+            <p class="solutions-grid-item__text">
+              <span>Predict the future</span>
+              <span>health of equipment</span>
+              <span>or an asset</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#1" class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Condition Monitoring</p>
-            <p class="solutions-grid-item__text">Get current equipment health</p>
+            <p class="solutions-grid-item__text">
+              <span>Get current equipment</span>
+              <span>health</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#2" class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Sensor data processing</p>
-            <p class="solutions-grid-item__text">Process different types of sensor data</p>
+            <p class="solutions-grid-item__text">
+              <span>Process different</span>
+              <span>types of sensor data</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#3" class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Smart HVAC</p>
-            <p class="solutions-grid-item__text">Minimize energy footprint of the building</p>
+            <p class="solutions-grid-item__text">
+              <span>Minimize energy</span>
+              <span>footprint of the</span>
+              <span>building</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#4" class="solutions-grid-item">
-            <p class="solutions-grid-item__caption">Machine learning</p>
-            <p class="solutions-grid-item__text">Detect anomalies and patterns in the raw data</p>
+            <p class="solutions-grid-item__caption">
+              <span>Machine</span>
+              <span>learning</span>
+            </p>
+            <p class="solutions-grid-item__text">
+              <span>Detect anomalies</span>
+              <span>and patterns in the</span>
+              <span>raw data</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#5" class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Embedded Development</p>
-            <p class="solutions-grid-item__text">Low-level programming for Sensors, PLCs, Gateways, and other IoT
-              devices</p>
+            <p class="solutions-grid-item__text">
+              <span>Low - level</span>
+              <span>programming, PLCs,</span>
+              <span>and other IoT devices</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#6" class="solutions-grid-item">
-            <p class="solutions-grid-item__caption">DATA PROCESSING</p>
-            <p class="solutions-grid-item__text">Scalable solutions to establish data flow from field to the cloud
+            <p class="solutions-grid-item__caption">
+              <span>DATA</span>
+              <span>PROCESSING</span>
+            </p>
+            <p class="solutions-grid-item__text">
+              <span>Scalable solutions to</span>
+              <span>establish data flow</span>
+              <span>from field to the cloud</span>
             </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
           <a href="./solutions.html#7" class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Visualisations and Dashboards</p>
-            <p class="solutions-grid-item__text">Custom reporting and data exploration tools</p>
+            <p class="solutions-grid-item__text">
+              <span>Custom reporting</span>
+              <span>and data exploration</span>
+              <span>tools</span>
+            </p>
             <p class="solutions-grid-item__link blue-link">Read more</p>
           </a>
         </div>
